# django-react-notes

./: README.md
client/: package.json  tsconfig.json  webpack-dev.config.ts
client/src/: index.tsx
client/src/components/: App.tsx
client/src/pages/: RegisterPage.tsx
server/: Makefile  db.sqlite3  main.py  pyproject.toml
server/server/: settings.py  urls.py
server/server/api/: apps.py  urls.py  views.py
server/server/tasks/: apps.py  models.py  urls.py  views.py
server/server/tasks/migrations/: 0001_initial.py
server/server/users/: models.py  serializers.py  views.py
server/server/users/migrations/: 0001_initial.py
